--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.2.6",
+    "jwt-decode": "^3.1.2",
     "next": "13.1.6",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
+    "react-toastify": "^9.1.1",
+    "sass": "^1.57.1",
     "typescript": "4.9.4"
   }
 }
